[package]
authors = ["ruin0x11 <ipickering2@gmail.com>"]
edition = "2018"
name = "tamashii"
version = "0.1.0"
[dependencies]
bytes = "0.4.12"
futures = "0.1.29"
md5 = "0.6.1"
rand = "0.7.2"
tokio = "0.1.22"
num-traits = "0.2.8"
num-derive = "0.2.5"
flate2 = "1.0.11"
byteorder = "1.3.2"
log = "0.4.8"
env_logger = "0.6.2"
